--- a/package.json
+++ b/package.json
@@ -26,14 +26,20 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.0",
+    "bootstrap": "^3.3.6",
     "cross-env": "^1.0.6",
+    "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^3.11.3",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
+    "file-loader": "^0.8.5",
+    "image-webpack-loader": "^1.6.2",
     "marked": "^0.3.5",
     "rimraf": "^2.4.3",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
