--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.13.3",
     "file-loader": "^0.8.5",
     "image-webpack-loader": "^1.6.2",
+    "jsx-control-statements": "^2.0.3",
     "marked": "^0.3.5",
     "rimraf": "^2.4.3",
     "style-loader": "^0.13.0",
