--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.0",
     "bootstrap": "^3.3.6",
+    "brace": "^0.7.0",
     "cross-env": "^1.0.6",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
@@ -38,6 +39,7 @@
     "image-webpack-loader": "^1.6.2",
     "jsx-control-statements": "^2.0.3",
     "marked": "^0.3.5",
+    "react-ace": "^3.0.0",
     "rimraf": "^2.4.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
